# editor

./: Cargo.toml  IMPLEMENTATION.md  SPEC.md
editor-core/: Cargo.toml
editor-core/src/: anchor.rs  change.rs  compartment.rs  decoration.rs  diff.rs  facet.rs  history.rs  lib.rs  rangeset.rs  selection.rs  state.rs  sumtree.rs  theme.rs  transaction.rs
editor-core/src/rope/: mod.rs
editor-core/tests/: compartments.rs  filters.rs  heap_ceiling.rs  listener.rs  serde_roundtrip.rs  theme.rs
editor-diff/: Cargo.toml
editor-diff/src/: conflict.rs  lib.rs  overlay.rs  view.rs
editor-diff/tests/: integration.rs
editor-egui/: Cargo.toml
editor-egui/src/: completion.rs  lib.rs  panel.rs  tooltip.rs  translate.rs  widget.rs
editor-egui/src/minimap/: atlas.rs  mod.rs  tests.rs
editor-egui/src/widget/: blocks.rs  inline_paint.rs  layout.rs  measure.rs  search_panel.rs  texture_cache.rs
editor-egui/tests/: block_widget_click_regions.rs  block_widget_native_paint.rs  diff_block_height.rs  drop_indicator.rs  inline_widget_height.rs  non_interactive.rs  panel_visual.rs  regressions.rs  tooltip.rs  transactions_out.rs  visual.rs  widget_event.rs  wrap.rs
editor-md/: Cargo.toml
editor-md/src/: admonitions.rs  completion.rs  diagrams.rs  embeds.rs  equations.rs  folds.rs  indenter.rs  lib.rs  links.rs  meta.rs  notes.rs  styling.rs  syntax.rs  tables.rs
editor-md/tests/: extensions.rs  folds.rs  indent.rs  integration.rs  markdown_extra.rs
editor-ts/: Cargo.toml
editor-ts/src/: highlight.rs  languages.rs  lib.rs  parsing.rs
editor-ts/tests/: integration.rs
editor-view/: Cargo.toml
editor-view/src/: autocomplete.rs  brackets.rs  command.rs  diagnostics.rs  events.rs  find.rs  highlight.rs  highlights.rs  lib.rs  motion.rs  multicursor.rs  pairs.rs  panels.rs  popup.rs  snippets.rs  viewport.rs  whitespace.rs  wrapping.rs
editor-view/src/command/: mouse.rs
editor-view/tests/: atomic.rs  autopair.rs  autoscroll.rs  backspace_indent.rs  brackets.rs  completion.rs  cut.rs  decoration_height_routing.rs  diagnostics_integration.rs  drag.rs  multiclick.rs  panel.rs  rectangle.rs  scroll_caret.rs  search.rs  snippet.rs  uxsmall.rs
examples/diff/: Cargo.toml
examples/diff/src/: main.rs
examples/markdown/: Cargo.toml
examples/markdown/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
