[package]
name = "editor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
smallvec = { workspace = true, features = ["union"] }
smol_str.workspace = true
similar = { workspace = true }
web-time = { workspace = true }
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "smallvec/serde", "smol_str/serde"]

[dev-dependencies]
proptest.workspace = true
serde_json = "1"

[lints]
workspace = true
