[package]
name = "editor-view"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
editor-core.workspace = true
smol_str.workspace = true
smallvec.workspace = true
unicode-segmentation.workspace = true
web-time = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
smol_str.workspace = true

[lints]
workspace = true
